--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,12 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-    ]
+    "rewrites": []
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ],
+    "source": "functions"
   }
 }
