--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
+    "randomstring": "^1.1.5",
     "stripe": "^8.63.0"
   },
   "devDependencies": {
