--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "firebase-admin": "^8.12.1",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.8.0",
     "firebase-tools": "^8.4.1",
     "g": "^2.0.1",
     "hash-generator": "^0.1.0",
-    "stripe": "^8.63.0",
+    "stripe": "^8.71.0",
     "stripe-cli": "^0.1.0"
   },
   "devDependencies": {},
