can now specify state.test through functions:config to switch deploy between live and test stripe keys, also put url return in backticks because its neater and requires fewer variables

--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "test": "firebase emulators:start",
     "check": "firebase functions:config:get",
     "evl": "firebase functions:config:get > .runtimeconfig.json",
-    "ga": "git add --all",
-    "gs": "git status",
-    "gp": "git push"
+    "ga": "git add --all"
 
   },
   "repository": {
