added display of whether in testmode or not

--- a/.runtimeconfig.json
+++ b/.runtimeconfig.json
@@ -1,6 +1,6 @@
 {
   "state": {
-    "testing": "true"
+    "testing": "false"
   },
   "testkeys": {
     "public": "pk_test_FjTxRNal2FWcwhlqw0WtIETQ00ZDxO3D9S",
